--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="YYC Networks — Web & Software Consulting" />
   <meta property="og:description" content="Modern web and software development: consulting, projects, support. Realty websites with IDX + CRM." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://example.com/" />
+  <meta property="og:url" content="%SITE_URL%" />
   <meta property="og:image" content="https://images.unsplash.com/photo-1526379095098-d400fd0bf935?w=1200&q=80&auto=format&fit=crop" />
   <meta name="twitter:card" content="summary_large_image" />
   <script type="application/ld+json">
@@ -18,7 +18,7 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "YYC Networks",
-    "url": "https://example.com/",
+    "url": "%SITE_URL%",
     "logo": "https://fav.farm/🧩",
     "sameAs": []
   }
