--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="Modern web and software development: consulting, projects, support. Realty websites with IDX + CRM." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="%SITE_URL%" />
-  <meta property="og:image" content="https://images.unsplash.com/photo-1526379095098-d400fd0bf935?w=1200&q=80&auto=format&fit=crop" />
+  <meta property="og:image" content="https://source.unsplash.com/BfrQnKBulYQ/1200x630" />
   <meta name="twitter:card" content="summary_large_image" />
   <script type="application/ld+json">
   {
@@ -55,7 +55,7 @@
           <p class="mt-4 text-sm text-slate-500">Prefer real estate? Check out our <a href="realty.html" class="underline decoration-brand-400 decoration-2 underline-offset-2">fixed‑price realty website</a> with IDX + CRM.</p>
         </div>
         <div class="relative">
-          <img class="rounded-xl shadow-xl w-full object-cover" src="https://images.unsplash.com/photo-1526379095098-d400fd0bf935?w=1200&q=80&auto=format&fit=crop" alt="Abstract technology" />
+          <img class="rounded-xl shadow-xl w-full object-cover" src="https://source.unsplash.com/BfrQnKBulYQ/1600x900" alt="Shallow focus of computer code on screen" />
         </div>
       </div>
     </section>
