[YYC-2025-10-07] - changed banner again

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
           <p class="mt-4 text-sm text-slate-500">Prefer real estate? Check out our <a href="realty.html" class="underline decoration-brand-400 decoration-2 underline-offset-2">fixed‑price realty website</a> with IDX + CRM.</p>
         </div>
         <div class="relative">
-          <img class="rounded-xl shadow-xl w-full object-cover" src="https://source.unsplash.com/BfrQnKBulYQ/1600x900" alt="Shallow focus of computer code on screen" />
+          <img class="rounded-xl shadow-xl w-full object-cover" src="./assets/shahadat-rahman-BfrQnKBulYQ-unsplash.jpg" alt="Shallow focus of computer code on screen" />
         </div>
       </div>
     </section>
