--- a/public/index.html
+++ b/public/index.html
@@ -42,20 +42,18 @@
   </header>
 
   <main>
-    <section class="relative overflow-hidden">
-      <div class="absolute inset-0 -z-10 bg-gradient-to-br from-brand-50 via-white to-cyan-50"></div>
-      <div class="container mx-auto max-w-7xl px-4 py-20 grid md:grid-cols-2 gap-12 items-center">
-        <div>
-          <h1 class="text-4xl sm:text-5xl font-bold leading-tight mb-6">Web & Software Development that ships</h1>
-          <p class="text-lg text-slate-700 mb-8">Consulting, one‑off projects, and long‑term support for your existing stack. Transparent, special‑quote engagements tailored to your goals.</p>
+    <section class="relative overflow-hidden min-h-[60vh] min-h-[60svh] max-h-[60vh] flex items-center">
+      <img src="./assets/shahadat-rahman-BfrQnKBulYQ-unsplash.jpg" alt="Shallow focus of computer code on screen" class="absolute inset-0 -z-10 w-full h-full object-cover" />
+      <div class="absolute inset-0 -z-10 bg-black/60 md:bg-black/50"></div>
+      <div class="container mx-auto max-w-7xl px-4 py-24">
+        <div class="max-w-2xl">
+          <h1 class="text-4xl sm:text-5xl font-bold leading-tight mb-6 text-white">Web & Software Development that ships</h1>
+          <p class="text-lg mb-8 text-white/90">Consulting, one‑off projects, and long‑term support for your existing stack. Transparent, special‑quote engagements tailored to your goals.</p>
           <div class="flex gap-3">
             <a href="contact.html" class="btn">Start a conversation</a>
             <a href="services.html" class="btn-secondary">See services</a>
           </div>
-          <p class="mt-4 text-sm text-slate-500">Prefer real estate? Check out our <a href="realty.html" class="underline decoration-brand-400 decoration-2 underline-offset-2">fixed‑price realty website</a> with IDX + CRM.</p>
-        </div>
-        <div class="relative">
-          <img class="rounded-xl shadow-xl w-full object-cover" src="./assets/shahadat-rahman-BfrQnKBulYQ-unsplash.jpg" alt="Shallow focus of computer code on screen" />
+          <p class="mt-4 text-sm text-white/80">Prefer real estate? Check out our <a href="realty.html" class="text-white underline decoration-white/70 hover:decoration-white decoration-2 underline-offset-2">fixed‑price realty website</a> with IDX + CRM.</p>
         </div>
       </div>
     </section>
@@ -112,8 +110,8 @@
       <div class="text-sm">
         <div class="font-medium mb-2">Legal</div>
         <ul class="space-y-2">
-          <li><a href="#" class="hover:text-brand-700">Privacy</a></li>
-          <li><a href="#" class="hover:text-brand-700">Terms</a></li>
+          <li><a href="privacy.html" class="hover:text-brand-700">Privacy</a></li>
+          <li><a href="terms.html" class="hover:text-brand-700">Terms</a></li>
         </ul>
       </div>
     </div>
