--- a/public/services.html
+++ b/public/services.html
@@ -85,8 +85,8 @@
     <div class="text-sm">
       <div class="font-medium mb-2">Legal</div>
       <ul class="space-y-2">
-        <li><a href="#" class="hover:text-brand-700">Privacy</a></li>
-        <li><a href="#" class="hover:text-brand-700">Terms</a></li>
+        <li><a href="privacy.html" class="hover:text-brand-700">Privacy</a></li>
+        <li><a href="terms.html" class="hover:text-brand-700">Terms</a></li>
       </ul>
     </div>
   </div>
