[YYC-2025-10-07] - social meta image update, related website to chadpayne.ca and  updated seo

--- a/public/services.html
+++ b/public/services.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Consulting, one‑off projects, and support for your existing products. Tailored, special‑quote engagements." />
   <link rel="stylesheet" href="./assets/styles.css" />
   <link rel="icon" href="https://fav.farm/🧩" />
+  <link rel="me" href="https://chadpayne.ca" />
+  <link rel="author" href="https://chadpayne.ca" />
 </head>
 <body class="bg-white text-slate-800">
 <header class="sticky top-0 z-40 bg-white/80 backdrop-blur border-b border-slate-200">
@@ -80,6 +82,7 @@
         <li><a href="services.html" class="hover:text-brand-700">Services</a></li>
         <li><a href="realty.html" class="hover:text-brand-700">Realty Websites</a></li>
         <li><a href="contact.html" class="hover:text-brand-700">Contact</a></li>
+        <li><a href="https://chadpayne.ca" target="_blank" rel="noopener noreferrer" class="hover:text-brand-700">Resume (Chad Payne)</a></li>
       </ul>
     </div>
     <div class="text-sm">
