--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
   <meta property="og:description" content="Modern web and software development: consulting, projects, support. Realty websites with IDX + CRM." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="%SITE_URL%" />
-  <meta property="og:image" content="https://source.unsplash.com/BfrQnKBulYQ/1200x630" />
+  <meta property="og:image" content="./assets/shahadat-rahman-BfrQnKBulYQ-unsplash.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
+  <link rel="me" href="https://chadpayne.ca" />
+  <link rel="author" href="https://chadpayne.ca" />
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -20,7 +22,13 @@
     "name": "YYC Networks",
     "url": "%SITE_URL%",
     "logo": "https://fav.farm/🧩",
-    "sameAs": []
+    "sameAs": ["https://chadpayne.ca"],
+    "founder": {
+      "@type": "Person",
+      "name": "Chad Payne",
+      "url": "https://chadpayne.ca",
+      "sameAs": ["https://chadpayne.ca"]
+    }
   }
   </script>
   <!-- Build note: run `npm run build` to generate /public/assets/styles.css -->
@@ -105,6 +113,7 @@
           <li><a href="services.html" class="hover:text-brand-700">Services</a></li>
           <li><a href="realty.html" class="hover:text-brand-700">Realty Websites</a></li>
           <li><a href="contact.html" class="hover:text-brand-700">Contact</a></li>
+          <li><a href="https://chadpayne.ca" target="_blank" rel="noopener noreferrer" class="hover:text-brand-700">Resume (Chad Payne)</a></li>
         </ul>
       </div>
       <div class="text-sm">
