--- a/public/realty.html
+++ b/public/realty.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Fixed‑price realty website: branded template, IDX listings, CRM support, content/image updates. $500 setup + $100/month." />
   <link rel="stylesheet" href="./assets/styles.css" />
   <link rel="icon" href="https://fav.farm/🏠" />
+  <link rel="me" href="https://chadpayne.ca" />
+  <link rel="author" href="https://chadpayne.ca" />
   <meta property="og:title" content="Realty Websites — IDX + CRM" />
   <meta property="og:description" content="Fixed template with your brand, IDX listings, CRM support, content/image updates. $500 setup + $100/month." />
   <meta property="og:image" content="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?w=1200&q=80&auto=format&fit=crop" />
@@ -132,6 +134,7 @@
         <li><a href="services.html" class="hover:text-brand-700">Services</a></li>
         <li><a href="realty.html" class="hover:text-brand-700">Realty Websites</a></li>
         <li><a href="contact.html" class="hover:text-brand-700">Contact</a></li>
+        <li><a href="https://chadpayne.ca" target="_blank" rel="noopener noreferrer" class="hover:text-brand-700">Resume (Chad Payne)</a></li>
       </ul>
     </div>
     <div class="text-sm">
